Partially fixes on mobile news and search pages.

--- a/hypster/Areas/apps/css/appSite0.css
+++ b/hypster/Areas/apps/css/appSite0.css
@@ -5016,16 +5016,19 @@ a:visited
 }
 /*------------------------------------------------------------*/
 
-.PostVideoCont iframe,
-iframe[src^="https://www.youtube.com/"],
-#player
+iframe
 {
     width:346px !important; height:206px !important;
 }
 
+iframe[src^="http://hypster.com/hypsterPlayer/MPL_News"]
+{
+    width:353px !important; height:562px !important;
+}
+
 iframe[src^="https://www.facebook.com/"]
 {
-    width:100% !important; height:530px !important;
+    width:100% !important; height:530px !important; overflow-y:scroll !important;
 }
 
 
